--- a/Tutorial: A Picture for Karl’s Students.tex
+++ b/Tutorial: A Picture for Karl’s Students.tex
@@ -240,7 +240,7 @@ arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \draw [<->] (1,0) -- (1.5cm,10pt) -- (2cm,0pt) -- (2.5cm,10pt);
 \end{tikzpicture}
 
-\begin{tikzpicture}[>=Stealth]
+\begin{tikzpicture}
 \draw [->] (0,0) arc [start angle=180, end angle=30, radius=10pt];
 \draw [<<-,very thick] (1,0) -- (1.5cm,10pt) -- (2cm,0pt) -- (2.5cm,10pt);
 \end{tikzpicture}
@@ -255,4 +255,54 @@ arc [start angle=0, end angle=30, radius=3mm] -- cycle;
 \draw (3,0) -- (3,1);
 \end{tikzpicture}
 
+\section{Transformations}
+\tikz \draw (0,0) -- (0,0.5) [xshift=2pt] (0,0) -- (0,0.5);
+\begin{tikzpicture}[even odd rule,rounded corners=2pt,x=10pt,y=10pt]
+\filldraw[fill=yellow!80!black] (0,0) rectangle (1,1)
+[xshift=5pt,yshift=5pt] (0,0) rectangle (1,1)
+[rotate=30] (-1,-1) rectangle (2,2);
+\end{tikzpicture}
+
+\section{Repeating Things: For-Loops}
+\foreach \x in {1,2,3} {$x =\x$, }
+
+\begin{tikzpicture}[scale=3]
+\clip (-0.1,-0.2) rectangle (1.1,1.51);
+\draw[step=.5cm,gray,very thin] (-1.4,-1.4) grid (1.4,1.4);
+\filldraw[fill=green!20,draw=green!50!black] (0,0) -- (3mm,0mm)
+arc [start angle=0, end angle=30, radius=3mm] -- cycle;
+\draw[->] (-1.5,0) -- (1.5,0);
+\draw[->] (0,-1.5) -- (0,1.5);
+\draw (0,0) circle [radius=1cm];
+\foreach \x in {-1cm,-0.5cm,1cm}
+\draw (\x,-1pt) -- (\x,1pt);
+\foreach \y in {-1cm,-0.5cm,0.5cm,1cm}
+\draw (-1pt,\y) -- (1pt,\y);
+\end{tikzpicture}
+
+\tikz\foreach \x in {-1,-0.5,1}
+\draw[xshift=\x cm] (0pt,-1pt) -- (0pt,1pt);
+
+\tikz \foreach \x in {1,...,10}
+\draw (\x,0) circle (0.4cm);
+
+\tikz \foreach \x in {-1,-0.5,...,1}
+\draw (\x cm,-1pt) -- (\x cm,1pt);
+
+\begin{tikzpicture}
+\foreach \x in {1,2,...,5,7,8,...,12}
+\foreach \y in {1,...,5}
+{
+\draw (\x,\y) +(-.5,-.5) rectangle ++(.5,.5);
+\draw (\x,\y) node{\x,\y};
+}
+\end{tikzpicture}
+
+\section{Adding Text}
+\begin{tikzpicture}
+\draw (0,0) rectangle (2,2);
+\draw (0.5,0.5) node [fill=yellow!80!black]
+{Text at \verb!node 1!}
+-- (1.5,1.5) node {Text at \verb!node 2!};
+\end{tikzpicture}
 \end{document}
